--- a/package.json
+++ b/package.json
@@ -1,24 +1,25 @@
 {
-    "name": "Vinyl",
-    "version": "1.0.0",
-    "description": "A community for record enthusiasts to review their favorite albums.",
-    "scripts": {
-        "start": "node server.js",
-        "start:dev": "nodemon server.js",
-        "db:create": "createdb vinyl",
-        "db:drop": "dropdb vinyl",
-        "db:schema": "psql -d vinyl < schema.sql",
-        "db:seed": "psql -d vinyl < albums.sql"
-    },
-    "license": "MIT",
-    "dependencies": {
-        "body-parser": "^1.17.2",
-        "dotenv": "^4.0.0",
-        "ejs": "^2.5.6",
-        "express": "^4.15.3",
-        "pg": "^6.2.4"
-    },
-    "devDependencies": {
-        "nodemon": "^1.11.0"
-    }
+  "name": "Vinyl",
+  "version": "1.0.0",
+  "description": "A community for record enthusiasts to review their favorite albums.",
+  "scripts": {
+    "start": "node server.js",
+    "start:dev": "nodemon server.js",
+    "db:create": "createdb vinyl",
+    "db:drop": "dropdb vinyl",
+    "db:schema": "psql -d vinyl < schema.sql",
+    "db:seed": "psql -d vinyl < albums.sql"
+  },
+  "license": "MIT",
+  "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
+    "body-parser": "^1.17.2",
+    "dotenv": "^4.0.0",
+    "ejs": "^2.5.6",
+    "express": "^4.15.3",
+    "pg": "^6.2.4"
+  },
+  "devDependencies": {
+    "nodemon": "^1.11.0"
+  }
 }
