--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   },
   "license": "MIT",
   "dependencies": {
-    "bcrypt-nodejs": "0.0.3",
+    "bcrypt": "^1.0.2",
     "body-parser": "^1.17.2",
+    "cookie-parser": "^1.4.3",
     "dotenv": "^4.0.0",
     "ejs": "^2.5.6",
     "express": "^4.15.3",
+    "express-session": "^1.15.4",
     "pg": "^6.2.4"
   },
   "devDependencies": {
