--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "ejs": "^2.5.6",
     "express": "^4.15.3",
     "express-session": "^1.15.4",
+    "moment": "^2.18.1",
     "pg": "^6.2.4"
   },
   "devDependencies": {
